<resources>
    <string name="app_name">NUMAD22Fa_Team_22_Service_App</string>
    <string name="services">Services</string>
    <string name="search_temperature">SEARCH TEMPERATURE</string>
    <string name="enter_name_of_city">Enter City Name</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="weather_forecast_for_city">Weather Forecast For City</string>
    <string name="error_message">Error  while searching for the given input!!</string>
    <string name="your_name">Your Name:</string>
    <string name="partner_name">Partner Name:</string>
    <string name="get_compatibility">Get % Compatibility</string>
    <string name="percentage_label">%</string>
    <string name="_0">0</string>
    <string name="partner">partner</string>
    <string name="you">you</string>
    <string name="random_cat_viewer">Random Cat Viewer</string>
    <string name="cat_viewer">cat viewer</string>
    <string name="love_compatibility">Love Compatibility</string>
    <string name="random_cat_button">Random Cat Viewer</string>
    <string name="stick_it_to_em">Stick It To \'Em</string>
    <string name="about">About</string>
    <string name="member_1_full_name">Orkhan Dadashov</string>
    <string name="member_2_full_name">Daniel Yang</string>
    <string name="member_3_full_name">Edgar Alan David</string>
    <string name="team_name">Team 22</string>
    <string name="member_1_email">dadashov.o@northeastern.edu</string>
    <string name="member_2_email">yang.dan@northeastern.edu</string>
    <string name="member_3_email">david.e@northeastern.edu</string>
    <string name="sticker2">sticker2</string>
    <string name="sticker1">sticker1</string>
    <string name="history">HISTORY</string>
    <string name="message">Message:</string>
    <string name="sendTo">Sending To:</string>
    <string name="messenger_window">Messenger Window</string>
    <string name="send_msg">SEND MSG</string>
    <string name="login">LOGIN</string>
    <string name="username_field">username</string>
    <string name="password_field">password</string>
    <string name="password">Password:</string>
    <string name="messenger_login">Messenger Login</string>
    <string name="history_label">History</string>
    <string name="history_info">Info:</string>
    <string name="sender">Sender:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="ice_cream_in_a_cone">ice cream in a cone</string>
    <string name="basketball_hoops">basketball hoops</string>
    <string name="softdrink_in_a_bottle">softdrink in a bottle</string>
    <string name="count">Count:</string>
    <string name="colorful_balloons">colorful balloons</string>
    <string name="username">UserName:</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="channel_name">Receiver notification Name</string>
    <string name="channel_description">Notification channel for the receiver</string>
    <string name="channel_id">Receiver_Channel_id</string>
    <string name="send_to">Send To:</string>
    <string name="enter_name_to_send">Enter Name to Send To</string>
</resources>