<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".single_history_log">

    <TextView
        android:id="@+id/label_sender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/sender"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/label_history"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/date"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/label_sender"
        app:layout_constraintTop_toBottomOf="@+id/label_sender" />

    <TextView
        android:id="@+id/label_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/time"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/label_date"
        app:layout_constraintTop_toBottomOf="@+id/label_date" />

    <TextView
        android:id="@+id/label_history"
        android:layout_width="43dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/history_info"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />
</androidx.constraintlayout.widget.ConstraintLayout>