<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".love_calculator">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="729dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_yourName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yourNameLabel"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/input_partnerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/partnerNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/input_yourName"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/yourNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/your_name"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/input_yourName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/partnerNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/partner_name"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/input_partnerName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_partnerName" />

    <Button
        android:id="@+id/button"
        android:layout_width="237dp"
        android:layout_height="36dp"
        android:layout_marginTop="5dp"
        android:text="@string/get_compatibility"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_partnerName"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/compatibilityResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/_0"
        android:textColor="#2139C1"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/percentage_label"
        android:textColor="#2139C1"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/compatibilityResult"
        app:layout_constraintTop_toTopOf="@+id/compatibilityResult" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <!-- Linear progress indicator -->
    <!-- Circular progress indicator -->

    <TextView
        android:id="@+id/errorTextViewComp"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:text="@string/error_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarComp" />

    <ProgressBar
        android:id="@+id/progressBarComp"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="101dp"
        android:layout_height="18dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compatibilityResult" />
</androidx.constraintlayout.widget.ConstraintLayout>