<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sticker_history">

    <TextView
        android:id="@+id/tv_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/history_label"
        android:textColor="#0000FF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sticker_list"
        android:layout_width="408dp"
        android:layout_height="618dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_count" />

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/count"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_history"
        app:layout_constraintTop_toBottomOf="@+id/tv_history" />

    <TextView
        android:id="@+id/view_count"
        android:layout_width="47dp"
        android:layout_height="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_count"
        app:layout_constraintTop_toTopOf="@+id/tv_count" />

    <TextView
        android:id="@+id/tv_history_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/username_field"
        android:textColor="#0000FF"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/tv_history"
        app:layout_constraintTop_toTopOf="@+id/tv_history"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>