<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/city_and_country_info_cointainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/city_and_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00FF00"
                android:textIsSelectable="true"
                android:textSize="30sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:textColor="#00FF00"
                android:textIsSelectable="true"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/total_result_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weather_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#00FF00"
                android:textIsSelectable="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/weather_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#00FF00"
                android:textIsSelectable="true"
                android:textSize="90sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/daily_min_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#00FF00"
                    android:textIsSelectable="true"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/daily_max_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#00FF00"
                    android:textIsSelectable="true"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="131dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_name_of_city"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#00FF00"
            android:textColorHint="#DD2C00" />

        <Button
            android:id="@+id/temperature_search_by_city_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="224dp"
            android:onClick="run"
            android:text="@string/search_temperature"
            android:textColor="#00FF00" />


        <ProgressBar
            android:id="@+id/progress_bar_loader"
            style="?android:attr/progressBarStyle"
            android:layout_width="101dp"
            android:layout_height="45dp"
            android:layout_alignTop="@+id/city_name"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="14dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/error_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="43dp"
            android:layout_marginBottom="226dp"
            android:text="@string/error_message"
            android:textColor="#DD2C00"
            android:visibility="gone" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>